# OficinaCrew

./: .env.example  .gmail_monitor_state.json  EJEMPLOS.md  README.md  ROADMAP.md  benchmark.py  benchmark_cases.py  benchmark_output.txt  benchmark_results.json  bitacora.md  gmail_monitor.py  pyproject.toml  requisitos.md  setup_gmail.py  ui_test_cases.py  web_server.py
documentos/: BRXS.md  Erasmus&co.md  politica_teletrabajo.md  politica_vacaciones.md
evaluation/: benchmark.py  results.json  test_cases.json  validate_intent.py
src/ejemplo1/: main.py
src/ejemplo1/crews/agenda_crew/: agenda_crew.py
src/ejemplo1/crews/comunicacion_crew/: comunicacion_crew.py
src/ejemplo1/crews/comunicacion_crew/config/: agents.yaml
src/ejemplo1/crews/documentos_crew/: documentos_crew.py  documentos_tools.py
src/ejemplo1/crews/documentos_crew/config/: tasks.yaml
src/oficinacrew/: main.py
src/oficinacrew/crews/agenda_crew/config/: agents.yaml  tasks.yaml
src/oficinacrew/crews/comunicacion_crew/: comunicacion_crew.py
src/oficinacrew/crews/comunicacion_crew/config/: tasks.yaml
src/oficinacrew/crews/documentos_crew/: documentos_crew.py  documentos_tools.py
src/oficinacrew/crews/documentos_crew/config/: agents.yaml  tasks.yaml
tests/: test_requisitos.py
