[project]
name = "ejemplo1"
version = "0.1.0"
description = "Sistema multi-agente con supervisor Flow que enruta peticiones a agentes especializados"
authors = [{ name = "Martin", email = "martin@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.4",
    "litellm>=1.82.6",
    "pypdf>=4.0.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.0.0",
    "tzdata>=2024.1",
    "plyer>=2.1.0",
    "win10toast>=0.9.0",
]

[project.scripts]
kickoff = "ejemplo1.main:kickoff"
run_crew = "ejemplo1.main:kickoff"
plot = "ejemplo1.main:plot"
run_with_trigger = "ejemplo1.main:run_with_trigger"
ejemplo1 = "ejemplo1.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
